Updated the spacing of the name-image-container ( holding the name of the users ). Without that little tweak of the margin on the bottom, when the user was trying toedit their profile the container would touch ( even overlap a little ) the trophy container on bigger screens. That is now fixed.

--- a/MatchFixer-Web-App/wwwroot/css/profile/profile.css
+++ b/MatchFixer-Web-App/wwwroot/css/profile/profile.css
@@ -142,6 +142,7 @@
     flex-grow: 0;
     height: fit-content;
     min-height: 300px;
+    margin-bottom: 0.5em;
 }
 
 
